--- a/perroCartoon/style.css
+++ b/perroCartoon/style.css
@@ -3,3 +3,60 @@
     margin: 0;
     box-sizing: border-box;
 }
+:root{
+    --mainColor: #383232;
+    --secondColor: #e57716;
+    --auxColor:#814510;
+    --auxcolor2:#f4b885;
+}
+body{
+    height: 100vh;
+    background-color: #1684e5;
+    background: linear-gradient(0deg, rgba(170,215,255,1) 0%, rgba(22,132,229,1) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+}
+.base{
+    position: relative;
+    z-index: -1;
+    margin-top: -35px;
+    width: 100%;
+    height: 30vh;
+    background-color: #814510;
+}
+#rect2232{
+    fill:#814510!important;
+}
+#patas path{
+    display:inline;
+    fill:#e57716;
+    fill-opacity:1;
+    stroke:#000000;
+    stroke-width:1.5;
+    stroke-linejoin:round;
+    stroke-dasharray:none;
+    stroke-opacity:1
+}
+#boca{
+    opacity: 0;
+}
+#cabeza{
+    transform: translate(-39.57075px,-70.89694px);
+}
+
+#perro:hover #boca{
+    animation: mostrar 0s linear 1s 1 forwards;
+}
+#perro:hover #cabeza{
+    animation: movimiento 1s linear 0s 1 forwards;
+}
+@keyframes movimiento {
+    0%{transform: translate(-39.57075px,-70.89694px);}
+    100%{transform: translate(-39.57075px,-104.89694px);}
+}
+@keyframes mostrar{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
