--- a/paintSVG/css/style.css
+++ b/paintSVG/css/style.css
@@ -3,6 +3,22 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: rgb(255,126,71);
+    background: linear-gradient(0deg, rgba(255,126,71,1) 0%, rgba(243,83,107,1) 100%);
+}
+.container{
+    box-shadow: 0px 10px 20px 10px #0000008a;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+#svg5 {cursor: url(../img/bote.svg)0 30, auto;}
 
 ellipse, path{
     fill:#ffffff;
@@ -11,6 +27,42 @@ ellipse, path{
     stroke-linecap:round;
     stroke-linejoin:round;
 }
-#textura path{
-    stroke-width:2px;
+#textura path {stroke-width:2px;}
+
+#svg5 ellipse:hover, #svg5 path:not(#textura path):hover{
+    stroke: rgb(0, 194, 58);
+    stroke-width: 6px;
+    stroke-dasharray: 10px 20px;
+    animation: bordes 1s linear infinite;
+}
+
+@keyframes bordes {
+    0% {stroke-dashoffset: 0px;}
+    100% {stroke-dashoffset: 30px;}
+}
+.lienzo{
+    width: 350px;
+    padding: 30px;
+    border: 2px solid black;
+    border-bottom: none;
+    border-radius: 10px 10px 0px 0px;
+    background-color: white;
+}
+.control{
+    height: 100px;
+    width: 350px;
+    background-color: white;
+    border: 2px solid black;
+    border-top: none;
+    border-radius: 0px 0px 10px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 20px;
+}
+.control span{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
 }
