--- a/customAmongus/css/style.css
+++ b/customAmongus/css/style.css
@@ -122,7 +122,7 @@ main {
     justify-items: center;
     
 }
-.hats div{
+.hats svg, .hats div{
     width: 60px;
     height: 60px;
     border-radius: 5px;
