--- a/customAmongus/css/style.css
+++ b/customAmongus/css/style.css
@@ -32,6 +32,10 @@ body{
     display: grid;
     place-content: center;
     user-select: none;
+    background: rgb(209,167,150);
+background: radial-gradient(circle, rgba(209,167,150,1) 10%, rgba(192,160,188,1) 80%);
+background: rgb(171,147,126);
+background: radial-gradient(circle, rgba(171,147,126,1) 10%, rgba(139,116,135,1) 90%);
 }
 main {
     height: 500px;
@@ -40,6 +44,7 @@ main {
     border: 4px solid #2C3B39;
     border-radius: 8px;
     padding: 18px;
+    box-shadow: 0px 5px 15px 5px rgba(0,0,0,0.6);
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 50px 1fr;
@@ -147,3 +152,15 @@ main {
 .active{
     display: grid;
 }
+/* .color{
+    position: relative;
+}
+.color--6::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/selected.png);
+    background-position: center;
+} */
