--- a/customAmongus/css/style.css
+++ b/customAmongus/css/style.css
@@ -32,16 +32,20 @@
 
 body{
     height: 100vh;
-    display: grid;
-    place-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     user-select: none;
     background: rgb(171,147,126);
     background: radial-gradient(circle, rgba(171,147,126,1) 10%, rgba(139,116,135,1) 90%);
 }
+.horizontal{
+    align-items: flex-start;
+}
 #externalSVG { width:200px; }
 
 main {
-    height: 500px;
+    height: 480px;
     width: 600px;
     background-color: var(--panelMainColor);
     border: 4px solid #2C3B39;
@@ -59,7 +63,8 @@ main {
 .preview{
     grid-area: preview;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+    padding-bottom: 15px;
     justify-content: center;
     background-color: var(--panelSecondColor);
 }
@@ -150,3 +155,54 @@ main {
     background-image: url(../img/selected.png);
     background-position: center;
 }
+
+@media screen and (max-width:600px){ 
+    main{
+        height: 288px;
+        width: 360px;
+        border: 3px solid #2C3B39;
+        border-radius: 5px;
+        padding: 8px;
+        grid-template-rows: 30px 1fr;
+        gap: 8px;
+    }
+    #externalSVG { width:110px; }
+    .menu{
+        gap: 3px;
+    }
+    .menu__option{
+        border-radius: 3px;
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
+    .colors {
+        padding: 10px;
+        gap: 10px 0px;
+    }
+    .colors div{
+        width: 35px;
+        height: 35px;
+        border:3px solid black;
+        border-radius: 6px;
+    }
+    .hats, .pets, .skins{
+        gap: 3px;
+    }
+    .hats svg, .hats div,
+    .pets svg, .pets div,
+    .skins svg, .skins div{
+    width: 38px;
+    height: 38px;
+    border-radius: 3px;
+}
+    .selected::after{
+        background-size: contain;
+    }
+}
+
+/* @media all and (orientation: landscape) {
+    main{
+        height: 500px;
+        width: 600px;
+    }
+} */
