--- a/paintSVG/css/style.css
+++ b/paintSVG/css/style.css
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     height: 100vh;
+    min-width: 350px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,6 +15,8 @@ body{
     background: rgb(255,126,71);
     background: linear-gradient(0deg, rgba(255,126,71,1) 0%, rgba(243,83,107,1) 100%);
 }
+.horizontal{min-height: 490px;}
+
 .container{
     box-shadow: 0px 10px 20px 10px #0000008a;
     border-radius: 10px;
@@ -63,4 +68,10 @@ ellipse, path{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-transform: uppercase;
     font-weight: bold;
+}
+@media screen and (max-width:400px) {
+    .repo-link{
+        width: 60px;
+        height: 60px;
+    }
 }
