--- a/customAmongus/css/style.css
+++ b/customAmongus/css/style.css
@@ -39,9 +39,7 @@ body{
     background: rgb(171,147,126);
     background: radial-gradient(circle, rgba(171,147,126,1) 10%, rgba(139,116,135,1) 90%);
 }
-.horizontal{
-    align-items: flex-start;
-}
+
 #externalSVG { width:200px; }
 
 main {
@@ -156,7 +154,8 @@ main {
     background-position: center;
 }
 
-@media screen and (max-width:600px){ 
+@media screen and (max-width:475px) and (orientation:portrait), (max-height:360px) and (orientation: landscape){
+    .repo-link{width: 60px;height: 60px;}
     main{
         height: 288px;
         width: 360px;
@@ -166,15 +165,14 @@ main {
         grid-template-rows: 30px 1fr;
         gap: 8px;
     }
-    #externalSVG { width:110px; }
-    .menu{
-        gap: 3px;
-    }
+    #externalSVG { width:125px; }
+    .menu{gap: 3px;}
     .menu__option{
         border-radius: 3px;
         font-size: 16px;
         letter-spacing: 1px;
     }
+    .preview{padding-bottom: 10px;}
     .colors {
         padding: 10px;
         gap: 10px 0px;
@@ -185,24 +183,53 @@ main {
         border:3px solid black;
         border-radius: 6px;
     }
-    .hats, .pets, .skins{
-        gap: 3px;
-    }
+    .hats, .pets, .skins{gap: 3px;}
     .hats svg, .hats div,
     .pets svg, .pets div,
     .skins svg, .skins div{
     width: 38px;
     height: 38px;
     border-radius: 3px;
-}
-    .selected::after{
-        background-size: contain;
     }
+    .selected::after{background-size: contain;}
 }
 
-/* @media all and (orientation: landscape) {
+@media screen and (min-height:361px) and (max-height:480px) and (orientation: landscape){
+    .repo-link{width: 60px;height: 60px;}
     main{
-        height: 500px;
-        width: 600px;
+        height: 380px;
+        width: 475px;
+        border: 3px solid #2C3B39;
+        border-radius: 5px;
+        padding: 8px;
+        grid-template-rows: 30px 1fr;
+        gap: 8px;
     }
-} */
+    #externalSVG { width:175px; }
+    .menu{gap: 5px;}
+    .menu__option{
+        border-radius: 4px;
+        font-size: 18px;
+        letter-spacing: 1px;
+    }
+    .preview{padding-bottom: 12px;}
+    .colors {
+        padding: 15px;
+        gap: 15px 0px;
+    }
+    .colors div{
+        width: 47px;
+        height: 47px;
+        border:3px solid black;
+        border-radius: 6px;
+    }
+    .hats, .pets, .skins{ gap: 5px;}
+    .hats svg, .hats div,
+    .pets svg, .pets div,
+    .skins svg, .skins div{
+    width: 50px;
+    height: 50px;
+    border-radius: 3px;
+    }
+    .selected::after{ background-size: contain; }
+}
